--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
             ENV_CONTENT="$ENV_PROD"
           fi
           ssh ${USER}@${HOST} '
-            cd /path/to/your/project &&
+            cd CryptoSniper2.0-Backend/ &&
             git checkout ${{ github.ref_name }} &&
             git pull &&
             echo "$ENV_CONTENT" > .env.$ENVIRONMENT &&
