執行腳本問題排查

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,6 +77,6 @@ jobs:
             echo \"$ENV_CONTENT\" > .env.\$ENVIRONMENT &&
             npm install -g pnpm &&
             pnpm install &&
-            echo 'Running script: \$SCRIPT'
-            pnpm run \$SCRIPT
+            echo 'Running script: $SCRIPT' &&
+            pnpm run $SCRIPT
           "
