執行腳本問題排查

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ NODE_ENV=development
 
 # 啟動命令
 # 開發環境: pnpm run start:dev
-# 測試和生產環境: node /usr/src/app/dist/main
+# 測試和生產環境: node dist/main.js
 COMMAND=pnpm run start:dev
 
 
