modify：將 run build 改回到 CI/CD 腳本執行
透過 .sh 檔案執行會導致 執行結束跳出關閉容器，若不在背景執行則是CI/CD會卡住沒辦法往下執行

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
             echo \"$ENV_CONTENT\" > .env.\$ENVIRONMENT &&
             npm install -g pnpm &&
             pnpm install &&
-            chmod +x start.sh &&  # 設置執行權限
+            pnpm run build
             echo 'Running script: $SCRIPT' &&
             pnpm run $SCRIPT
           "
