fix：正式環境找不到env
- 問題：正式環境找不到env
    - 原因：沒有建立正確的檔案名稱
    - 解決方式：移除  前的反斜線

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
             cd CryptoSniper2.0-Backend/ &&
             git checkout ${{ github.ref_name }} &&
             git pull &&
-            echo \"$ENV_CONTENT\" > .env.\$ENVIRONMENT &&
+            echo \"$ENV_CONTENT\" > .env.$ENVIRONMENT &&
             npm install -g pnpm &&
             pnpm install &&
             pnpm run build
