--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 ENV=dev
 
 # 應用程序運行的 port
-PORT=8202
+PORT=3000
 
 # Node.js 運行環境設置
 # development, test, production
@@ -18,4 +18,9 @@ NODE_ENV=development
 # 測試和生產環境: node dist/main.js
 COMMAND=pnpm run start:dev
 
+# 資料庫設定
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=cryptosniper_dev
+DATABASE_URL=postgresql://user:password@db:5432/cryptosniper_dev
 
