--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     # 卷掛載，用於開發環境中的熱重載
     volumes:
       - ${VOLUMES:-.:/usr/src/app}
-      - ${NODE_MODULES_VOLUME:-node_modules:/usr/src/app/node_modules}
+      - /usr/src/app/node_modules
     # 設置容器內的環境變量
     environment:
       - NODE_ENV=${NODE_ENV:-development}
