--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
       POSTGRES_DB: ${DB_NAME:-cryptosniper}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_${ENV}:/var/lib/postgresql/data
     ports:
       - '${DB_PORT:-5432}:5432'
     networks:
@@ -60,4 +60,5 @@ networks:
 # 定義命名卷
 volumes:
   node_modules:
-  postgres_data:
+  postgres_data_prod:
+  postgres_data_test:
