--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ DB_PASSWORD=password
 DB_NAME=cryptosniper_dev
 DATABASE_URL=postgresql://user:password@db:5432/cryptosniper_dev
 
+# Redis 配置
+REDIS_HOST=cryptosniper2.0-redis # 對應 docker 容器名稱
+REDIS_PORT=6379
+REDIS_PASSWORD=yourpassword
